# backend/src/routes/auth.routes.js
@@ -1,0 +1,11 @@
+'use strict';
+
+const { Router } = require('express');
+const { signup, login } = require('../controllers/auth.controller');
+
+const router = Router();
+
+router.post('/signup', signup);
+router.post('/login', login);
+
+module.exports = router;
